<resources>
    <string name="app_name">CUAC FM</string>
    <string name="station_name">CUAC FM</string>
    <string name="contact_mail">comunicacion@cuacfm.org</string>
    <string name="tutorial_programa">Queres facer un programa?</string>
    <string name="tutorial_programa_1">En CUAC FM podes.</string>
    <string name="tutorial_programa_2">Ter a posibilidade a comunicar é o teu dereito según a Declaración Universal dos Dereitos Humanos.</string>
    <string name="tutorial_programa_3">Artigo 19. Toda persoa ten dereito á liberdade de opinión e de expresión; este dereito inclúe a liberdade de ter opinións sen interferencia e de buscar, recibir e transmitir información e ideas por calquera medio e sen limitación de fronteiras.</string>
    <string name="tutorial_programa_4">Mira a nosa grella de programación, para ver que horas libres hai. Se tes algunha dúbida ou non atopas a hora que buscas, non te preocupes, manda un correo a comunicacion@cuacfm.org ou chama aó 981 14 00 45</string>
    <string name="tutorial_programa_5">A qué esperas?</string>
    <string name="gallery">Galería de fotos</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Cerrar menu</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_item_streaming">Escuchar emisión</string>
    <string name="drawer_item_streaming_stop">Parar</string>
    <string name="drawer_item_streaming_close">Cerrar</string>
    <string name="drawer_item_podcasting">Escuchar emisión</string>
    <string name="drawer_item_podcasting_stop">Detener episodio</string>
    <string name="no_elements">No hay elementos</string>
    <string name="no_content">No hay contenido en este momento</string>
    <string name="downloading">Descargando...</string>
    <string name="downloaded">Descargado con éxito del episodio: </string>
    <string name="error_download">Error en la descarga del episodio: </string>
    <string name="podcast_info_title">Descripción del programa:</string>
    <string name="podcast_popup_title">Continuar reproducción</string>
    <string name="podcast_popup_content">Este audio lo empezaste a escuchar en otro momento. ¿Deseas continuar?</string>
    <string name="podcast_popup_button_yes">Si</string>
    <string name="podcast_popup_button_no">No</string>
    <string name="account">Cuenta</string>
    <string name="report_activity">Informe</string>
    <string name="report_activity_create">Crear informe</string>
    <string name="report_active">Activo:</string>
    <string name="report_answer">Respuesta: </string>
    <string name="report_dateCreate">Fecha de creación:</string>
    <string name="report_dateRevision">Fecha de revisión:</string>
    <string name="report_tidy">Ordenación:</string>
    <string name="report_dirt">Suciedad:</string>
    <string name="report_configuration">Configuración:</string>
    <string name="report_configuration_full">Configuración de los equipos:</string>
    <string name="report_openDoor">¿Estaba abierta la emisora cuando llegaste?</string>
    <string name="report_viewMembers">¿Llegaste a ver la/s persona/s que hacen el siguiente programa? </string>
    <string name="report_photos">Fotos de las incidencias: </string>
    <string name="report_add_photos">Añadir fotos: </string>
    <string name="report_add_photos_info">Puedes añadir fotos si hay algún desperfecto</string>
    <string name="report_location">Ubicación: </string>
    <string name="report_description">Descripción: </string>
    <string name="report_programName">Programa:</string>
    <string name="report_send_answer">Responder</string>
    <string name="report_send_down">Marcar como revisado</string>
    <string name="report_send_answer_success">!Se ha enviado la respuesta¡</string>
    <string name="report_send_answer_fail">¡Hubo un fallo al enviar la respuesta!</string>
    <string name="report_send">Enviar</string>
    <string name="report_send_success">!Se ha enviado el informe¡</string>
    <string name="report_send_fail">¡Hubo un fallo al enviar el informe!</string>
    <string name="report_remove_success">!Se ha eliminado la imagen¡</string>
    <string name="report_complete_fields">¡Rellena todos los campos!</string>
    <string name="report_low_tidy">Nivel bajo de ordenación</string>
    <string name="report_low_dirt">Nivel bajo de limpieza</string>
    <string name="report_low_configration">Nivel bajo de configuración de los equipos</string>
    <string name="report_max_photos">¡Alcanzado el número máximo de fotos!</string>
    <string name="report_info_title">Descripción de la informe:</string>
    <string name="programs_user_fail">¡No se han recuperado los programas!</string>
    <string name="default_value">0</string>
    <string name="take_photo">Sacar foto</string>
    <string name="choose_photo">Buscar foto</string>
    <string name="dateStart">Fecha de comienzo</string>
    <string name="dateEnd">Fecha de finalización</string>
    <string name="book_activity">Reserva</string>
    <string name="book_activity_create">Crear Reserva</string>
    <string name="book_active">Activo:</string>
    <string name="book_answer">Respuesta: </string>
    <string name="book_dateCreate">Fecha de creación:</string>
    <string name="book_dateRevision">Revisión:</string>
    <string name="book_dateApproval">Aprovación:</string>
    <string name="book_dateStart">Comienzo: </string>
    <string name="book_dateEnd">Fin: </string>
    <string name="book_elementName">Elemento</string>
    <string name="book_description">Descripción</string>
    <string name="book_location">Ubicación</string>
    <string name="book_state">Estado: </string>
    <string name="book_send_answer">Responder</string>
    <string name="book_send_answer_success">!Se ha enviado la respuesta¡</string>
    <string name="book_send_answer_fail">¡Hubo un fallo al enviar la respuesta!</string>
    <string name="book_send">Enviar</string>
    <string name="book_send_success">!Se ha enviado la petición de reserva¡</string>
    <string name="book_send_fail">¡Hubo un fallo al enviar la reserva!</string>
    <string name="book_send_fail_already">!Ya se ha reservado el elemento en un margen mayor!</string>
    <string name="book_fail_dates">!La fecha de fin ha de ser posterior que la de comienzo!</string>
    <string name="book_fail_dates_now">!No se pueden hacer reservas en el pasado!</string>
    <string name="book_complete_fields">¡Rellena todos los campos!</string>
    <string name="elements_reservable_fail">¡No se han recuperado los elementos reservables!</string>
    <string name="action_station">Emisora</string>
    <string name="action_gallery">Galería</string>
    <string name="action_streaming">Escuchar emisión</string>
    <string name="action_scheduler">Programación</string>
    <string name="action_news">Noticias</string>
    <string name="action_podcast">Podcast</string>
    <string name="action_map">Ubicación</string>
    <string name="action_social">Redes sociales</string>
    <string name="action_contact">Más información</string>
    <string name="action_twitter">Twitter</string>
    <string name="action_facebook">Facebook</string>
    <string name="action_webpage">Página web</string>
    <string name="action_thanks">Agradecimientos</string>
    <string name="action_cuac">CUAC FM</string>
    <string name="action_dev">Desarrollo</string>
    <string name="action_management">Gestión</string>
    <string name="action_user_report">Mis informes</string>
    <string name="action_report">Informes</string>
    <string name="action_user_book">Mis reservas</string>
    <string name="action_book">Reservas</string>
    <string name="action_members">Ir a Members</string>
    <string name="action_radioco">Ir a RadioCo</string>
    <string name="accept">Aceptar</string>
    <string name="deny">Rechazar</string>
    <string name="search">Buscar</string>
    <string name="share">Compartir</string>
    <string name="share_send_to">Compartir desde app de CUAC FM</string>
    <string name="share_via">\n\n\na través CUAC FM para Android.</string>
    <string name="okdialog">Ok</string>
    <string name="titledialog">Agradecimientos</string>
    <string name="msgdialog">La app ha sido desarrollado por Fernando Souto para compartir con la comunidad de radios comunitarias.\n\nAgradecimientos a CUAC FM por permirtir que usara su radio como testers.

        \n\nGracias a los creadores de las siguientes librerías que han permitido que esta app fuera posible.

\n\ncompile \'org.springframework.android:spring-android-rest-template:2.0.0.M3\'
\ncompile group: \'com.google.code.gson\', name: \'gson\', version: \'2.7\'
\ncompile \'com.wang.avi:library:2.1.3\'
\ncompile \'com.squareup.picasso:picasso:2.5.2\'
\ncompile \'com.pkmmte.pkrss:pkrss:1.2\'
\ncompile \'com.squareup.okhttp:okhttp:2.0.0\'
\ncompile \'com.squareup.okhttp:okhttp-urlconnection:2.0.0\'
        \ncompile \'com.google.android.exoplayer:exoplayer:r1.5.3\'
    \ncompile \'com.github.flavienlaurent.discrollview:library:0.0.2@aar\'</string>
    <string name="home_activity">Pantalla principal</string>
    <string name="content_activity">Detalle de contenido</string>
    <string name="gallery_activity">Galería</string>
    <string name="podcast_activity">Podcast</string>
    <string name="splash_activity">Splash</string>
    <string name="tutorial_activity">Tutorial</string>
    <string name="home_view">Home Screen</string>
    <string name="news_view">News screen</string>
    <string name="podcast_view">Podcast screen</string>
    <string name="report_view">Report screen</string>
    <string name="book_view">Report screen</string>
    <string name="transmisions_view">Programación</string>
    <string name="auth_failed">Autenticación fallida</string>
    <string name="auth_success">Autenticación correcta</string>
    <string name="google_services_failed">Error de Google Play Services</string>
    <string name="required">Obligatorio</string>
    <string name="required_email">Introduce el email</string>
    <string name="authenticate">Autenticarse</string>
    <string name="reset_password">Reinciar Contraseña</string>
    <string name="resend_password">Resetear Contraseña</string>
    <string name="resend_password_success">!Se ha enviado un email para resetear la contraseña¡</string>
    <string name="resend_password_fail">¡Hubo un fallo al enviar el email para resetear la contraseña!</string>
    <string name="signin">Autenticarse</string>
    <string name="back">Atras</string>
    <string name="signout">Desconectarse</string>
    <string name="signup">¿Eres nuevo? Registrate</string>
    <string name="verify_email">Verificar email</string>
    <string name="email_input">Email</string>
    <string name="password_input">Contraseña</string>
    <string name="forgot_password">¿Olvidaste la contraseña?</string>
    <string name="forgot_password_info">¿Contraseña olvidada?</string>
    <string name="forgot_password_msg">Se enviará un email al correo indicado</string>
    <string name="true_value">Sí</string>
    <string name="false_value">No</string>
    <string name="MANAGEMENT">En Gestión</string>
    <string name="ACCEPT">Aceptado</string>
    <string name="DENY">Rechazado</string>
    <string name="tab_today">hoy</string>
    <string name="tab_monday">Lunes</string>
    <string name="tab_tuesday">Martes</string>
    <string name="tab_wednesday">Miércoles</string>
    <string name="tab_thursday">Jueves</string>
    <string name="tab_friday">Viernes</string>
    <string name="tab_saturday">Sábado</string>
    <string name="tab_sunday">Domingo</string>
</resources>