<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright © 2016 @ Fernando Souto González
  ~  * Copyright © 2017 @ Pablo Grela
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  * http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/station"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_emisora"
            android:icon="@drawable/station"
            android:title="@string/action_station" />
        <item
            android:id="@+id/nav_galeria"
            android:icon="@drawable/gallery"
            android:title="@string/action_gallery" />
        <item
            android:id="@+id/nav_emision"
            android:icon="@drawable/streaming"
            android:title="@string/action_streaming" />
        <item
            android:id="@+id/nav_scheduler"
            android:icon="@drawable/scheduler"
            android:title="@string/action_scheduler" />
    </group>

    <group
        android:id="@+id/rsss"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news"
            android:title="@string/action_news" />
        <item
            android:id="@+id/nav_podcast"
            android:icon="@drawable/podcast"
            android:title="@string/action_podcast" />
    </group>

    <item
        android:id="@+id/management"
        android:title="@string/action_management"
        android:visible="false">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_members"
                    android:icon="@drawable/webpage"
                    android:title="@string/action_members" />
                <item
                    android:id="@+id/nav_radioco"
                    android:icon="@drawable/webpage"
                    android:title="@string/action_radioco" />
                <item
                    android:id="@+id/nav_user_report"
                    android:icon="@drawable/pen"
                    android:title="@string/action_user_report" />
                <item
                    android:id="@+id/nav_report"
                    android:icon="@drawable/manage_report"
                    android:title="@string/action_report"
                    android:visible="false" />
                <item
                    android:id="@+id/nav_user_book"
                    android:icon="@drawable/book"
                    android:title="@string/action_user_book" />
                <item
                    android:id="@+id/nav_book"
                    android:icon="@drawable/manage_book"
                    android:title="@string/action_book"
                    android:visible="false" />
            </group>

        </menu>
    </item>

    <item android:title="@string/action_social">
        <menu>
            <item
                android:id="@+id/nav_twitter"
                android:icon="@drawable/twitter"
                android:title="@string/action_twitter" />
            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/facebook"
                android:title="@string/action_facebook" />
        </menu>
    </item>

    <item android:title="@string/action_contact">
        <menu>
            <item
                android:id="@+id/nav_webpage"
                android:icon="@drawable/webpage"
                android:title="@string/action_webpage" />
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/map_marker"
                android:title="@string/action_map" />
        </menu>
    </item>

    <item android:title="@string/action_thanks">
        <menu>
            <item
                android:id="@+id/nav_cuac"
                android:icon="@drawable/cuac"
                android:title="@string/action_cuac" />
            <item
                android:id="@+id/nav_dev"
                android:icon="@drawable/dev"
                android:title="@string/action_dev" />
        </menu>
    </item>

</menu>
