<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright © 2017 @ Pablo Grela
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  * http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/app_bar_marginTop"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
       >

        <RelativeLayout
            android:id="@+id/book_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/elementName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/book_elementName"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/accountName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/elementName"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/account"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/dateCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/accountName"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/book_dateCreate"
                android:textColor="@android:color/white"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/dateStart_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateCreate"
                android:text="@string/book_dateStart"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateCreate"
                android:layout_marginLeft="22dp"
                android:layout_toRightOf="@+id/dateStart_head"
                android:text="@string/default_value"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dateEnd_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateStart_head"
                android:text="@string/book_dateEnd"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateStart_head"
                android:layout_marginLeft="85dp"
                android:layout_toRightOf="@+id/dateEnd_head"
                android:text="@string/default_value"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dateRevision_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateEnd_head"
                android:layout_marginTop="10dp"
                android:text="@string/book_dateRevision"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateRevision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateEnd_head"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/dateRevision_head"
                android:text="@string/default_value"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dateApproval_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateRevision"
                android:text="@string/book_dateApproval"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateApproval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateRevision"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/dateApproval_head"
                android:text="@string/default_value"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/description_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateApproval"
                android:layout_marginTop="10dp"
                android:text="@string/book_description"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/description_head"
                android:layout_marginBottom="10dp"
                android:text="@string/no_content"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/state_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:layout_marginTop="10dp"
                android:text="@string/book_state"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/state_head"
                android:text="@string/default_value"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/active_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/state_head"
                android:layout_marginBottom="10dp"
                android:text="@string/book_active"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/state_head"
                android:layout_marginLeft="14dp"
                android:layout_toRightOf="@+id/active_head"
                android:text="@string/default_value"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/answer_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/active_head"
                android:text="@string/book_answer"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/answer_new"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/answer_head"
                android:background="@android:color/white"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="6"
                android:maxLength="500"
                android:maxLines="10"
                android:minLines="6"
                android:scrollbars="vertical"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answer_new"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/answer_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answer"
                android:layout_weight="1"
                android:text="@string/book_send_answer"
                android:theme="@style/ThemeOverlay.ButtonApp" />

            <LinearLayout
                android:id="@+id/answer_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answer_button"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/accept_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ok_icon"
                    android:maxHeight="20dp"
                    android:text="@string/accept"
                    android:theme="@style/ThemeOverlay.ButtonApp" />

                <Button
                    android:id="@+id/deny_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/accept_button"
                    android:drawableLeft="@drawable/deny_icon"
                    android:maxHeight="20dp"
                    android:text="@string/deny"
                    android:theme="@style/ThemeOverlay.ButtonApp" />

            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>