<!--
  ~ /*
  ~  * Copyright (C) 2017 @ Pablo Grela
  ~  *
  ~  * Developer Pablo Grela
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  * http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp">

    <ImageView
        android:id="@+id/channel_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_nav_header" />

    <View
        android:id="@+id/viewtrans"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorPrimaryDark85" />

    <TextView
        android:id="@+id/programName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/report_programName"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/accountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/programName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/account"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/dateCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountName"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"

        android:layout_marginTop="10dp"
        android:text="@string/report_dateCreate"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/dirt_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateCreate"
        android:layout_marginLeft="10dp"
        android:text="@string/report_dirt"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dirt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateCreate"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/dirt_head"
        android:text="@string/default_value"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/tidy_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dirt_head"
        android:layout_marginLeft="10dp"
        android:text="@string/report_tidy"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tidy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dirt_head"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/tidy_head"
        android:text="@string/default_value"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/configuration_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tidy_head"
        android:layout_marginLeft="10dp"
        android:text="@string/report_configuration"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/configuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tidy_head"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/configuration_head"
        android:text="@string/default_value"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</RelativeLayout>